refactor(tooling): consolidate entity-models pipeline into context + per-entity walk
Restructures tooling/entity along the PipelineRendererContext.of(...) pattern so
the entity-models pipeline reads as one factory + per-entity walker instead of a
flat list of 12 sibling resolvers. Bit-identical entity_models.json /
entity_geometry.json / block_entities.json output against the pre-rewrite
baseline; parity buckets 87/98/100/100 unchanged (verified via entityParityVanilla).

Structure:

- ToolingEntityContext (factory) + ClassNodeCache so 42 redundant
  AsmKit.loadClass call sites across 10 resolvers hit cache instead of
  re-reading the jar
- EntitySessionWalk per-entity orchestrator replaces 90 lines of TEM inline
  resolver fan-out
- EntityRegistryDiscovery merges MobRegistryDiscovery + EntityRendererDiscovery
  (joins the two registry walks by EntityType field name)
- EntityBoneResolver fuses EntityLayerScanner + EntityHiddenBonesResolver
  (both walked the model-class hierarchy and renderer ctor)
- EntityRendererOverrides fuses EntitySetupRotationsResolver +
  EntityRendererScaleResolver (both walked the same renderer class for
  adjacent overrides)
- Nested records renamed to .Result convention (Binding / Variant /
  DefaultVariant / Resolution / OverlayDescriptor / BlockOverlayDescriptor)
- TEM methods relocated to EntityFamilyResolver, EntityDiagnosticsWriter,
  EntityRuntimeJsonWriter; TEM shrinks 1053 -> 393 LOC
- GeometryParser physically extracted from ToolingBlockEntities.Parser
  (~2880 LOC moved); TBE drops 4035 -> 1139 LOC
- JsonOptional helpers adopted at 15 .has() ternary sites in TBE +
  GeometryParser + EntityDiagnosticsWriter
- 4 hardcoded ASM descriptors lifted to VanillaSourceClasses
  (MESH_TRANSFORMER_DESC, RENDER_TYPE, LIVING_ENTITY_RENDER_STATE,
  BLOCK_MODEL_RENDER_STATE)
- NON_BASE_STEM_SUFFIXES audit derives candidate set from live texture
  universe + logs drift; static set still the authoritative filter
- Javadocs + inline comments scrub